--- a/example.service
+++ b/example.service
@@ -4,7 +4,7 @@ Requires=example.socket
 After=network.target auditd.service
 
 [Service]
-ExecStart=/usr/sbin/example-service --log-to /var/log/example-service.log
+ExecStart=/usr/sbin/example-service --log-to /var/log/example-service.log --foreground
 ExecReload=/usr/bin/example-service --reload
 PIDFile=/var/run/example-service.pid
 KillSignal=SIGINT
